# training

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  ci.yml
data/: questions.json  近代史.json  近代史.txt  马原判断.csv  马原单选.csv  马原多选.csv
src/: lib.rs  main.rs
