[package]
name = "training"
version = "0.2.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
bincode = "1.3.1"
crossterm = "0.19.0"
csv = "1.1.5"
once_cell = "1.5.2"
rand = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
text_io = "0.1.8"
